--- a/package.json
+++ b/package.json
@@ -4,45 +4,49 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "~14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "~52.0.0",
-    "expo-asset": "~11.0.5",
-    "expo-auth-session": "~6.0.0",
-    "expo-constants": "~17.0.8",
-    "expo-crypto": "~14.0.0",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.0",
-    "expo-modules-core": "~2.2.3",
-    "expo-print": "~14.0.3",
-    "expo-router": "~4.0.0",
-    "expo-secure-store": "~14.0.0",
-    "expo-sharing": "~13.0.0",
-    "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "~14.0.0",
+    "expo": "^54.0.32",
+    "expo-asset": "~12.0.12",
+    "expo-auth-session": "~7.0.10",
+    "expo-constants": "~18.0.13",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.11",
+    "expo-linking": "~8.0.11",
+    "expo-modules-core": "~3.0.29",
+    "expo-print": "~15.0.8",
+    "expo-router": "~6.0.22",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "papaparse": "^5.4.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.0",
-    "react-native-reanimated": "~3.16.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "^0.7.2",
+    "react-native-worklets-core": "^1.6.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/papaparse": "^5.3.14",
     "@types/react": "~18.3.0",
+    "sharp": "^0.34.5",
     "typescript": "~5.3.3"
   },
   "private": true
